--- a/style.css
+++ b/style.css
@@ -151,24 +151,54 @@ body {
 }
 
 .header {
-    background-color: #e2e8f0;
+    background-color: white;
     grid-area: 1/1/2/4;
+
+    display: grid;
+    grid-template: 1fr/repeat(3, 1fr);
+}
+
+.logo {
+    align-self: center;
+    justify-self: center;
+}
+
+.logo>span {
+    font-size: 3rem;
+    font-weight: 800;
+
+}
+
+.main-content>button {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 1rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+    align-self: center;
+    justify-self: center;
+    border: none;
+    background-color: #f0eef1;
 }
 
 .main-content {
-    background-color: white;
+    background-color: #f0eef1;
     grid-area: 2/1/3/4;
 
     display: grid;
+    grid-template: 1fr 4fr 1fr/1fr repeat(5, 2fr) 1fr;
     overflow: auto;
 }
-
 
 .shelf {
     border: 1px solid black;
 }
 
+.book-card {
+    border: 1px solid black;
+}
+
 footer {
-    background-color: #94a3b8;
+    background-color: #f0eef1;
     grid-area: 3/1/4/4;
 }
