--- a/style.css
+++ b/style.css
@@ -164,21 +164,26 @@ body {
 }
 
 .logo>span {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 800;
 
 }
 
 .main-content>button {
-    width: 8rem;
-    height: 8rem;
+    width: 100%;
+    height: 5rem;
     border-radius: 1rem;
-    font-size: 1.25rem;
+    font-size: 1.75rem;
     font-weight: 600;
     align-self: center;
     justify-self: center;
     border: none;
     background-color: #f0eef1;
+    grid-area: 1/1/2/-1;
+}
+
+.main-content>button:disabled {
+    color: black;
 }
 
 .main-content {
@@ -186,8 +191,63 @@ body {
     grid-area: 2/1/3/4;
 
     display: grid;
-    grid-template: 1fr 4fr 1fr/1fr repeat(5, 2fr) 1fr;
+    grid-template: .5fr 4fr 1fr/1fr repeat(5, 2fr) 1fr;
     overflow: auto;
+}
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    /* Change visibility on button click */
+    visibility: hidden;
+    transform: scale(1.1);
+}
+
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
+}
+
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+
+.close-button:hover {
+    background-color: darkgray;
+}
+
+form {
+    display: grid;
+    grid-auto-flow: row;
+}
+
+form>label {
+    display: inline;
+}
+
+/* Give class when modal is to be displayed */
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
 
 .shelf {
