--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
     height: 100vh;
 
     display: grid;
-    grid-template: 1fr 4fr 1fr/1fr 4fr 1fr;
+    grid-template: 0.5fr 4fr 0.5fr/1fr 4fr 1fr;
     grid-auto-flow: row;
     overflow: auto;
 }
@@ -153,7 +153,6 @@ body {
 .header {
     background-color: white;
     grid-area: 1/1/2/4;
-
     display: grid;
     grid-template: 1fr/repeat(3, 1fr);
 }
@@ -251,11 +250,28 @@ form>label {
 }
 
 .shelf {
-    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    grid-area: 2/2/3/7;
+
+    display: grid;
+    grid-template: 1fr/repeat(3, 1fr);
+    grid-auto-flow: row;
+    gap: 2rem;
 }
 
 .book-card {
-    border: 1px solid black;
+    box-shadow: 1px 1px 1px rgb(179, 177, 177);
+    background-color: white;
+    display: grid;
+    grid-template: repeat(4, 1fr)/1fr;
+}
+
+.has-read {
+    background-color: green;
+}
+
+.hasnt-read {
+    background-color: red;
 }
 
 footer {
