--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ body {
     grid-area: 2/1/3/4;
 
     display: grid;
-    grid-template: .5fr 4fr 1fr/1fr repeat(5, 2fr) 1fr;
+    grid-template: .5fr 4fr/1fr repeat(5, 2fr) 1fr;
     overflow: auto;
 }
 
@@ -263,7 +263,7 @@ form>label {
     box-shadow: 1px 1px 1px rgb(179, 177, 177);
     background-color: white;
     display: grid;
-    grid-template: repeat(4, 1fr)/1fr;
+    grid-template: repeat(3, .75fr) repeat(2, 1fr)/1fr;
     border-radius: 1rem;
     font-size: 2rem;
 }
@@ -274,6 +274,7 @@ form>label {
     border-radius: 1rem;
     border: none;
     justify-self: center;
+    align-items: center;
     font-size: 2rem;
 }
 
